--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.12",
+    "react-helmet-async": "^2.0.4",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
