--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-error-boundary": "^4.0.12",
     "react-helmet-async": "^2.0.4",
     "react-markdown": "^9.0.1",
+    "react-player": "^2.14.1",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
     "rehype-raw": "^7.0.0",
